# jinjabread

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.ini  requirements.txt
.circleci/: config.yml
benchmarks/: README.md  benchmark_prettify.py  capabilities.py  node_bench.js
dev-scripts/: update_html5lib_corpus.py
docs/design/: 2026-07-13-html-prettifier-improvements.md  2026-07-14-uv-tooling-plan.md
docs/superpowers/plans/: 2026-07-14-uv-tooling.md
docs/superpowers/specs/: 2026-07-13-html-prettifier-improvements-design.md
jinjabread/: __init__.py  __main__.py  base.py  build.py  config.py  defaults.toml  errors.py  new.py  parsers.py  serve.py  tests.py  utils.py
scripts/: update_html5lib_corpus.py
tests/: invariants.py  test_contract.py  test_html5lib_corpus.py  test_prettify_invariants.py  test_site.py  tests.py
tests/corpus/html5lib/: COMMIT  README.md  SOURCE.md  update.py
tests/test_data/test_directory_index_markdown_content/content/: post1.md  post3.md
tests/test_data/test_directory_index_markdown_content/layouts/: markdown.html
tests/test_data/test_directory_index_markdown_content_with_directory_siblings/content/: index.md
tests/test_data/test_directory_index_markdown_content_with_directory_siblings/content/post2/: index.md
tests/test_data/test_markdown_content/layouts/: markdown.html
tests/test_data/test_markdown_content_with_custom_glob_pattern/: jinjabread.toml
tests/test_data/test_markdown_content_with_custom_glob_pattern/content/: article1.md  post1.md
tests/test_data/test_markdown_content_with_custom_glob_pattern/layouts/: article.html  post.html
