[build-system]
  requires = ["setuptools>=64", "setuptools_scm>=8"]
  build-backend = "setuptools.build_meta"

[project]
  name = "jinjabread"
  description = "An Python-based static site generator using Jinja templates."
  dynamic = ["version"]
  requires-python = ">=3.13"
  readme = "README.md"
  license = {file = "LICENSE"}
  dependencies = [
    "jinja2==3.1.6",
    "lxml==6.1.1",
    "markdown==3.10.2",
    "markdown-full-yaml-metadata==2.2.1",
    "werkzeug[watchdog]==3.1.8",
  ]

[project.urls]
  Website = "http://jinjabread.com"
  Repository = "https://github.com/jdeanwallace/jinjabread.git"
  Issues = "https://github.com/jdeanwallace/jinjabread/issues"

[dependency-groups]
  dev = [
    "black==26.5.1",
    "coverage",
    "html5lib",
    "hypothesis",
    "twine==6.2.0",
  ]

[tool.setuptools]
  packages = ["jinjabread"]

[tool.setuptools_scm]

[tool.black]
  # Pin the formatting target so black does not chase whatever Python it thinks the
  # open-ended requires-python allows (it would target 3.15 and skip its AST safety
  # check under the 3.13 we run). 3.13 is our floor; its output is valid on 3.13+.
  target-version = ["py313"]
