[build-system]
  requires = ["setuptools>=64", "setuptools_scm>=8"]
  build-backend = "setuptools.build_meta"

[project]
  name = "jinjabread"
  description = "An Python-based static site generator using Jinja templates."
  dynamic = ["version"]
  requires-python = ">=3.11"
  readme = "README.md"
  license = {file = "LICENSE"}
  # Support the current non-EOL Pythons from our floor up. The floor is 3.11
  # because config.py uses the stdlib tomllib (added in 3.11). requires-python
  # stays uncapped so future Pythons keep installing; the window is documented
  # here rather than capped.
  classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
  ]
  dependencies = [
    "jinja2==3.1.6",
    "lxml==6.1.1",
    "markdown==3.10.2",
    "markdown-full-yaml-metadata==2.2.1",
    "werkzeug[watchdog]==3.1.8",
  ]

[project.urls]
  Website = "http://jinjabread.com"
  Repository = "https://github.com/jdeanwallace/jinjabread.git"
  Issues = "https://github.com/jdeanwallace/jinjabread/issues"

[dependency-groups]
  dev = [
    "black==25.1.0",
    "coverage",
    "html5lib",
    "hypothesis",
    "twine==6.2.0",
  ]

[tool.setuptools]
  packages = ["jinjabread"]

[tool.setuptools_scm]
